Add missing translation #522

--- a/xliff/fr.xlf
+++ b/xliff/fr.xlf
@@ -23,6 +23,7 @@
 </trans-unit>
 <trans-unit id="s6d8b7baee47fca15">
   <source>Menü</source>
+  <target state="translated">Menu</target>
 </trans-unit>
 </body>
 </file>
