--- a/xliff/fr.xlf
+++ b/xliff/fr.xlf
@@ -25,6 +25,28 @@
   <source>Menü</source>
   <target state="translated">Menu</target>
 </trans-unit>
+<trans-unit id="sc42d48a091dc3230">
+  <source>Evento Startseite</source>
+</trans-unit>
+<trans-unit id="s1a8b197f436e88ab">
+  <source>Menü Benutzereinstellungen</source>
+</trans-unit>
+<trans-unit id="s79382e84e0818a6e">
+  <source>Mein Profil</source>
+  <target state="translated">Profil</target>
+</trans-unit>
+<trans-unit id="s784d82bd15c49b4a">
+  <source>Einstellungen</source>
+  <target state="translated">Paramètres</target>
+</trans-unit>
+<trans-unit id="s66fb201578f6f6c2">
+  <source>Video-Tutorials</source>
+  <target state="translated">Tutoriels vidéo</target>
+</trans-unit>
+<trans-unit id="s67749057edb2586b">
+  <source>Logout</source>
+  <target state="translated">Logout</target>
+</trans-unit>
 </body>
 </file>
 </xliff>
