--- a/xliff/fr-CH.xlf
+++ b/xliff/fr-CH.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-<file target-language="fr" source-language="de" original="lit-localize-inputs" datatype="plaintext">
+<file target-language="fr-CH" source-language="de-CH" original="lit-localize-inputs" datatype="plaintext">
 <body>
 <trans-unit id="sc874744fb4632e62">
   <source>Rechtliche Hinweise</source>
