Integrate new build with different event paths #536

--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -208,7 +208,8 @@
     }
   },
   "events": {
-    "title": "Anlassliste",
+    "title": "Tests und Bewertung",
+    "current.title": "Aktuelle Fächer",
     "no-events": "Keine Anlässe vorhanden",
     "search": "Anlass suchen",
     "search-by": "Suchen...",
