Include new build of schulverwaltung app #536

--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -208,8 +208,7 @@
     }
   },
   "events": {
-    "title": "Tests und Bewertung",
-    "current.title": "Aktuelle Fächer",
+    "title": "Anlassliste",
     "no-events": "Keine Anlässe vorhanden",
     "search": "Anlass suchen",
     "search-by": "Suchen...",
