--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -208,7 +208,10 @@
     }
   },
   "events": {
-    "title": "Anlassliste",
+    "title": "Tests und Bewertung",
+    "current": {
+      "title": "Aktuelle Fächer"
+    },
     "no-events": "Keine Anlässe vorhanden",
     "search": "Anlass suchen",
     "search-by": "Suchen...",
