--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -48,11 +48,24 @@
       "edit-absences": "Gemeldete Absenzen kontrollieren",
       "open-absences": "Offene Absenzen entschuldigen",
       "tests": "Tests und Bewertung",
+      "deadline": "Notenfrist",
       "my-absences-report": "Absenzen melden",
       "my-absences": "Offene Absenzen entschuldigen",
       "substitutions": "Stellvertretungen administrieren"
     },
-    "timetable": "Stundenplan"
+    "timetable": {
+      "title": "Stundenplan",
+      "no-entries": "An diesem Tag sind keine Stundenplaneinträge verfügbar.",
+      "today": "Heute",
+      "subscribe-calendar": "Kalender abonnieren",
+      "table": {
+        "time": "Zeit",
+        "subject": "Fach",
+        "teacher": "Lehrperson",
+        "room": "Raum",
+        "study-class": "Klasse"
+      }
+    }
   },
   "presence-control": {
     "title": "Präsenzkontrolle",
