--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -42,8 +42,30 @@
       "title": "Suche",
       "placeholder": "Lernende suchen..."
     },
-    "actions": "Aktionen",
-    "timetable": "Stundenplan"
+    "actions": {
+      "title": "Aktionen",
+      "presence-control": "Präsenzkontrolle",
+      "edit-absences": "Gemeldete Absenzen kontrollieren",
+      "open-absences": "Offene Absenzen entschuldigen",
+      "tests": "Tests und Bewertung",
+      "deadline": "Notenfrist",
+      "my-absences-report": "Absenzen melden",
+      "my-absences": "Offene Absenzen entschuldigen",
+      "substitutions": "Stellvertretungen administrieren"
+    },
+    "timetable": {
+      "title": "Stundenplan",
+      "no-entries": "An diesem Tag sind keine Stundenplaneinträge verfügbar.",
+      "today": "Heute",
+      "subscribe-calendar": "Kalender abonnieren",
+      "table": {
+        "time": "Zeit",
+        "subject": "Fach",
+        "teacher": "Lehrperson",
+        "room": "Raum",
+        "study-class": "Klasse"
+      }
+    }
   },
   "presence-control": {
     "title": "Präsenzkontrolle",
