Build schulverwaltung app #580 #527

--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -57,6 +57,8 @@
       "title": "Stundenplan",
       "no-entries": "Am gewählten Tag sind keine Stundenplaneinträge vorhanden.",
       "today": "Heute",
+      "nextDay": "nächster Tag",
+      "previousDay": "vorheriger Tag",
       "subscribe-calendar": "Kalender abonnieren",
       "table": {
         "time": "Zeit",
