--- a/xliff/fr-CH.xlf
+++ b/xliff/fr-CH.xlf
@@ -26,10 +26,6 @@
   <source>Tests und Bewertung</source>
   <target state="translated">Tests et évalution</target>
 </trans-unit>
-<trans-unit id="s23fc13291a6e1563">
-  <source>Stellvertretung</source>
-  <target state="translated">Remplacement</target>
-</trans-unit>
 <trans-unit id="s2ccb1c31fa62fea1">
   <source>Absenzen</source>
   <target state="translated">Absences</target>
@@ -62,10 +58,6 @@
   <source>Räume und Geräte reservieren</source>
   <target state="translated">Réserver des salles et des appareils</target>
 </trans-unit>
-<trans-unit id="s928e9e6a6a843b1a">
-  <source>Aus-/Weiterbildungen</source>
-  <target state="translated">Formation (continue)</target>
-</trans-unit>
 <trans-unit id="s005058d82b713689">
   <source>Noten</source>
   <target state="translated">Notes</target>
@@ -80,11 +72,11 @@
 </trans-unit>
 <trans-unit id="sec148f76974d9b06">
   <source>Anmeldedetails einlesen</source>
-  <target state="translated">Rechercher des personnes et des institutions</target>
+  <target state="translated">Saisir des détails d'inscription</target>
 </trans-unit>
 <trans-unit id="s321998fa37fe89be">
   <source>© Bildungs- und Kulturdirektion</source>
-  <target state="translated">© Direction de l’instruction publique et de la culture</target>
+  <target state="translated">© Direction de l'instruction publique et de la culture</target>
 </trans-unit>
 <trans-unit id="sc265a7e29e120db0">
   <source>Evento</source>
@@ -100,14 +92,15 @@
 </trans-unit>
 <trans-unit id="sc42d48a091dc3230">
   <source>Evento Startseite</source>
-  <target>Page d'accueil Evento</target>
+  <target state="translated">Page d'accueil Evento</target>
 </trans-unit>
 <trans-unit id="s1a8b197f436e88ab">
   <source>Menü Benutzereinstellungen</source>
+  <target state="translated">Menu paramètres</target>
 </trans-unit>
 <trans-unit id="s79382e84e0818a6e">
   <source>Mein Profil</source>
-  <target state="translated">Profil</target>
+  <target state="translated">Mon profil</target>
 </trans-unit>
 <trans-unit id="s784d82bd15c49b4a">
   <source>Einstellungen</source>
@@ -119,31 +112,51 @@
 </trans-unit>
 <trans-unit id="s67749057edb2586b">
   <source>Logout</source>
-  <target state="translated">Logout</target>
+  <target state="translated">Se déconnecter</target>
 </trans-unit>
 <trans-unit id="s8bb0b618bf59b96e">
   <source>Fotoliste</source>
+  <target state="translated">Détails de l'événement</target>
 </trans-unit>
 <trans-unit id="s8e7e1013bc071156">
   <source>Noteneingabe</source>
+  <target state="translated">Saisie des notes</target>
 </trans-unit>
 <trans-unit id="s885970c4ee8d21cc">
   <source>Schliessen</source>
+  <target state="translated">Fermer</target>
 </trans-unit>
 <trans-unit id="s676022c035fe65f5">
   <source>Stellvertretung ausüben</source>
-</trans-unit>
-<trans-unit id="sde99b4c098556d69">
-  <source>Stellvertretung aufheben</source>
+  <target state="translated">Effectuer un remplacement</target>
 </trans-unit>
 <trans-unit id="s918230658d993873">
   <source>Mobile Navigation</source>
+  <target state="translated">Navigation mobile</target>
 </trans-unit>
 <trans-unit id="sbd4575edfbf5c84f">
   <source>Hauptnavigation</source>
+  <target state="translated">Navigation principale</target>
 </trans-unit>
 <trans-unit id="sd10fcf5b06af72f6">
   <source>Servicenavigation</source>
+  <target state="translated">Navigation service</target>
+</trans-unit>
+<trans-unit id="s2e7964a3ed3ff4b2">
+  <source>Stellvertretung erfassen</source>
+  <target state="translated">Saisir un remplacement</target>
+</trans-unit>
+<trans-unit id="s2faf4f61874da789">
+  <source>Personen und Institutionen suchen</source>
+  <target state="translated">Rechercher des personnes et des institutions</target>
+</trans-unit>
+<trans-unit id="sc217172426ab34d5">
+  <source>Aus-/Weiterbildung</source>
+  <target state="translated">Formation (continue)</target>
+</trans-unit>
+<trans-unit id="sccb8c6ab6c0cf3e6">
+  <source>Stellvertretung beenden</source>
+  <target state="translated">Terminer le remplacement</target>
 </trans-unit>
 </body>
 </file>
